syntax = "proto3";

package store;

// common status

message CommonStatus {
     int32 status_code = 1;
    string message     = 2;
}

// message for directory service

message WriteNeedleRequest {
    uint32 volume_id = 1;
    uint64 needle_id = 2;
    int64  offset    = 3;
    int64  length    = 4;
    bytes  data      = 5;
}

message WriteNeedleResponse { CommonStatus status = 1; }

message ReadNeedleRequest {
    uint32 volume_id = 1;
    uint64 needle_id = 2;
}

message ReadNeedleResponse {
    CommonStatus status    = 1;
          uint32 volume_id = 2;
          uint64 needle_id = 3;
           int64 offset    = 4;
           int64 length    = 5;
           bytes data      = 6;
}

// rpc services

service Store {
    rpc WriteNeedle(stream WriteNeedleRequest) returns (WriteNeedleResponse) {};
    rpc ReadNeedle(ReadNeedleRequest) returns (stream ReadNeedleResponse) {};
}
